--- a/scss/pages/_cuidadopersonal.scss
+++ b/scss/pages/_cuidadopersonal.scss
@@ -43,11 +43,48 @@
   padding-top: 20px;
 }
 /* FINAL PAGINA CUIDADO PERSONAL */
-@media (max-width: 376px) {
+@media only screen and (max-width: 376px) {
+  
   .whatsapp {
     position: fixed;
     bottom: 30px;
+    width: 50px;
+    height: 50px;
   }
+  
+.navegacion_principal_header {
+  background-color: blue;
+  position: fixed;
+  display: grid;
+  grid-template-areas: "logo nav";
+  z-index:99
+}
+.navegacion_principal_header_logo {
+  grid-area: logo;
+  width: 10%;
+  border-radius: 30%;
+  padding: 6px;
+}
+
+.titulo_nav {
+  text-align: center;
+  border-radius: 50px;
+  padding: 2 0px;
+  margin: 20px;
+  color: white;
+}
+.nav-item {
+  font-size: 20px;
+  font-weight: bold;
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+}
+.navbar_name{
+color: white;
+}
+
+
+  
   .cuidadopersonal_principal {
     font: 400;
     text-align: center;
@@ -57,7 +94,7 @@
       rgb(0, 200, 255),
       rgb(94, 93, 93)
     );
-    height: 475vh;
+    height: 415vh;
   }
 
   .card {
